# vibepanel

./: CHANGELOG.md  Cargo.toml  README.md  config.toml  release-please-config.json
.copr/: Makefile  vibepanel.spec
.github/aur/vibepanel-bin/: PKGBUILD  PKGBUILD.template
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/vibepanel-core/src/: config.rs  theme.rs
crates/vibepanel-core/tests/: config_integration.rs
crates/vibepanel/src/: bar.rs  layout_math.rs  main.rs  popover_tracker.rs  sectioned_bar.rs  styles.rs
crates/vibepanel/src/services/: bar_manager.rs  battery.rs  bluetooth.rs  config_manager.rs  icons.rs  media.rs  network.rs  notification.rs  surfaces.rs  tooltip.rs  vpn.rs
crates/vibepanel/src/services/compositor/: hyprland.rs  manager.rs  niri.rs  types.rs
crates/vibepanel/src/widgets/: base.rs  battery.rs  battery_popover.rs  calendar_popover.rs  clock.rs  cpu.rs  css.rs  layer_shell_popover.rs  media.rs  media_components.rs  media_popover.rs  media_window.rs  memory.rs  mod.rs  notification.rs  notification_common.rs  notification_popover.rs  notification_toast.rs  notifications.rs  notifications_popover.rs  notifications_toast.rs  osd.rs  spacer.rs  system_popover.rs  tray.rs  updates.rs  window_title.rs  workspace.rs  workspaces.rs
crates/vibepanel/src/widgets/css/: bar.rs  base.rs  battery.rs  buttons.rs  calendar.rs  media.rs  mod.rs  notifications.rs  osd.rs  quick_settings.rs  system.rs  tray.rs
crates/vibepanel/src/widgets/quick_settings/: audio_card.rs  bar_widget.rs  window.rs  (+9 more)
docs/: README.md  configuration.md
