[workspace]
resolver = "2"
members = [
    "crates/vibepanel",
    "crates/vibepanel-core",
]

[workspace.package]
version = "0.6.4"
edition = "2024"
license = "MIT"
authors = ["David"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = "0.4"

# GTK4 and Wayland
gtk4 = { version = "0.10", features = ["v4_12"] }
pango = { version = "0.21", features = ["v1_56"] }
gtk4-layer-shell = "0.7"
gdk4-wayland = "0.10"
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-scanner = "0.31"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Hashing
sha2 = "0.10"

# Audio
libpulse-binding = "2.28"

# System
libc = "0.2"
udev = "0.9"
sysinfo = { version = "0.33", default-features = false, features = ["system", "network", "component"] }

# Synchronization
parking_lot = "0.12"

# HTTP
minreq = { version = "2.14", default-features = false, features = ["https-rustls"] }

# Internal crates
vibepanel-core = { path = "crates/vibepanel-core" }
